# RustCrabOperations

./: README.md
Local Payload Execution/: Readme.md
Local Payload Execution/Payload Execution - DLL/: Cargo.toml
Local Payload Execution/Payload Execytion - SHELLCODE/: Cargo.toml
Local Payload Execution/Payload Execytion - SHELLCODE/src/: main.rs
Local_Payload_Execution_DLL/Payload Execution - DLL/src/: main.rs
Payload Staging/: Readme.md
Payload Staging/Registry/: Cargo.toml
Payload Staging/Registry/src/: main.rs
Payload Staging/Web/: Cargo.toml
Payload Staging/Web/src/: main.rs
Process Enumeration/EnumProcess/: Cargo.toml
Process Enumeration/EnumProcess/src/: main.rs
Process Enumeration/NtQuerySystemInformation/: Cargo.toml
Process Enumeration/NtQuerySystemInformation/src/: main.rs
Process Injection/: Readme.md
Process Injection/Dll/: Cargo.toml
Process Injection/Dll/src/: main.rs
Process Injection/Shellcode/: Cargo.toml
Process Injection/Shellcode/src/: main.rs
Thread Hijacking/: Readme.md
Thread Hijacking/Local Thread Hijacking/: Cargo.toml
Thread Hijacking/Local Thread Hijacking/src/: main.rs
Thread Hijacking/local/: Cargo.toml
Thread Hijacking/local/src/: main.rs
